# roon-gui

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  io.rs  lib.rs  main.rs  roon_handler.rs  state.rs
src/components/: BrowseView.tsx  GroupingDialog.tsx  NowPlaying.tsx  QueueView.tsx  ZoneSelector.tsx
src/hooks/: useRoon.ts
src/types/: roon.ts
