[package]
name = "roon-gui"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["keatalay <kerem@talay.xyz>"]
repository = "https://github.com/keatalay/roon-gui"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
simplelog = "0.12"
time = "0.3"
chrono = { version = "0.4", features = ["clock"], default-features = false }
eyre = "0.6"
rand = "0.8"
roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.1.1", features = ["browse", "transport"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
